--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
 {% include "header.html" %}
 
-<!-- Page Header-->
-<header
-        class="masthead"
-        style="background-image: url('../static/assets/img/home-bg.jpg')"
->
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('../static/assets/img/home-bg.jpg')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
@@ -16,39 +13,38 @@
         </div>
     </div>
 </header>
-<!-- Main Content-->
+
+<!-- Main Content -->
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
-            <!-- Post preview-->
+            <!-- Post preview -->
             {% for post in all_posts %}
             <div class="post-preview">
                 <a href="{{ url_for('show_post', post_id=post[0]) }}">
                     <h2 class="post-title">{{ post[1] }}</h2>
                     <h3 class="post-subtitle">{{ post[6] }}</h3>
                 </a>
-                <!-- TODO: Add code to delete posts below -->
                 <p class="post-meta">
                     Posted by
-                    <a href="#">{{post[4]}}</a>
-                    on {{post[2]}}
+                    <a href="#">{{ post[4] }}</a>
+                    on {{ post[2] }}
                 </p>
+
+                <!-- Delete Post Button -->
+                <form action="{{ url_for('delete_post', post_id=post[0]) }}" method="POST" style="display:inline;">
+                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?')">✘</button>
+                </form>
             </div>
-            <!-- Divider-->
-            <hr class="my-4"/>
+            <hr class="my-4" />
             {% endfor %}
 
             <!-- New Post -->
             <div class="d-flex justify-content-end mb-4">
-                <!-- TODO: Adding new posts -->
-                <a
-                        class="btn btn-primary float-right"
-                        href="{{ url_for('add_new_post') }}"
-                >Create New Post</a
-                >
+                <a class="btn btn-primary float-right" href="{{ url_for('add_new_post') }}">Create New Post</a>
             </div>
 
-            <!-- Pager-->
+            <!-- Pager -->
             <div class="d-flex justify-content-end mb-4">
                 <a class="btn btn-secondary text-uppercase" href="#!">Older Posts →</a>
             </div>
