--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,10 @@
 
                 <!-- Delete Post Button -->
                 <form action="{{ url_for('delete_post', post_id=post[0]) }}" method="POST" style="display:inline;">
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?')">✘</button>
+                    <button type="submit" class="btn btn-danger btn-sm"
+                            onclick="return confirm('Are you sure you want to delete this post?')">
+                        Delete This Post
+                    </button>
                 </form>
             </div>
             <hr class="my-4" />
@@ -45,8 +48,8 @@
             </div>
 
             <!-- Pager -->
-            <div class="d-flex justify-content-end mb-4">
-                <a class="btn btn-secondary text-uppercase" href="#!">Older Posts →</a>
+<!--            <div class="d-flex justify-content-end mb-4">-->
+<!--                <a class="btn btn-secondary text-uppercase" href="#!">Older Posts →</a>-->
             </div>
         </div>
     </div>
