--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -5,21 +5,17 @@
 <!-- Page Header -->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/edit-bg.jpg'"
->
+  style="background-image: url('../static/assets/img/edit-bg.jpg'">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
-        <!-- TODO: Show a different h1 if editing existing post -->
           {% if is_edit: %}
           <h1>Edit Post</h1>
           {% else: %}
           <h1>New Post</h1>
           {% endif %}
-          <span class="subheading"
-            >You're going to make a great blog post!</span
-          >
+          <span class="subheading">You're going to make a great blog post!</span>
         </div>
       </div>
     </div>
