--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,5 @@
 {% include "header.html" %}
 
-<!-- Page Header-->
 <header class="masthead" style="background-image: url('{{post.author}}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -19,7 +18,6 @@
     </div>
 </header>
 
-<!-- Post Content -->
 <article>
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -27,12 +25,9 @@
                 {{ post.date|safe }}
 
                 <div class="d-flex justify-content-end mb-4">
-                    <!-- TODO: Editing posts-->
                     <a
                             class="btn btn-primary float-right"
-                            href="{{ url_for('edit_post', post_id=post.id) }}"
-                    >Edit Post</a
-                    >
+                            href="{{ url_for('edit_post', post_id=post.id) }}">Edit Post</a>
                 </div>
             </div>
         </div>
