--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,7 @@ include "header.html" %}
 <!-- Page Header -->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/login-bg.jpg')"
->
+  style="background-image: url('../static/assets/img/login-bg.jpg')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
@@ -24,6 +23,7 @@ include "header.html" %}
       <!-- TODO: add a flash message here for users registering twice -->
       <div class="col-lg-8 col-md-10 mx-auto">
         <!--TODO: render login form here-->
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"})}}
       </div>
     </div>
   </div>
