--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,5 @@
-{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
-include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %} {% block content %} {%include "header.html" %}
 
-<!-- Page Header -->
 <header
   class="masthead"
   style="background-image: url('../static/assets/img/register-bg.jpg')">
@@ -21,7 +19,8 @@ include "header.html" %}
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <!--TODO: render your registration form here-->
+        <!--: render your registration form here-->
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"})}}
       </div>
     </div>
   </div>
