--- a/templates/post.html
+++ b/templates/post.html
@@ -1,17 +1,17 @@
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('{{post.author}}')">
+<header class="masthead" style="background-image: url('{{ post.img_url }}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="post-heading">
                     <h1>{{ post.title }}</h1>
-                    <h2 class="subheading">{{ post.img_url }}</h2>
-                    <span class="meta"
-                    >Posted by
-            <a href="#">{{ post.body }}</a>
-            on {{ post.subtitle }}
-          </span>
+                    <h2 class="subheading">{{ post.subtitle }}</h2>
+                    <span class="meta">
+                        Posted by
+                        <a href="#">{{ post.author }}</a>
+                        on {{ post.date }}
+                    </span>
                 </div>
             </div>
         </div>
@@ -22,12 +22,12 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                {{ post.date|safe }}
+                <p>{{ post.body|safe }}</p>
 
                 <div class="d-flex justify-content-end mb-4">
-                    <a
-                            class="btn btn-primary float-right"
-                            href="{{ url_for('edit_post', post_id=post.id) }}">Edit Post</a>
+                    <a class="btn btn-primary float-right" href="{{ url_for('edit_post', post_id=post.id) }}">
+                        Edit Post
+                    </a>
                 </div>
             </div>
         </div>
