--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,11 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>Clean Blog</h1>
+                    {% if current_user.name: %}
+                    <h1>{{ current_user.name}} Blog </h1>
+                    {% else: %}
+                    <h1>Blog Theme</h1>
+                    {% endif %}
                     <span class="subheading">A Blog Theme by Start Bootstrap</span>
                 </div>
             </div>
