--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    {% if current_user.name: %}
-                    <h1>{{ current_user.name}} Blog </h1>
+                    {% if current_user.first_name: %}
+                    <h1>{{ current_user.first_name }} Blog </h1>
                     {% else: %}
                     <h1>Blog Theme</h1>
                     {% endif %}
