--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% include "header.html" %}
 
+
 <header
         class="masthead"
         style="background-image: url('../static/assets/img/contact-bg.jpg')">
@@ -27,6 +28,15 @@
                     I will get back to you as soon as possible!
                 </p>
                 <div class="my-5">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
                     <form
                             id="contactForm"
                             name="sentMessage"
