--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
                     {% if current_user.first_name: %}
-                    <h1>{{ current_user.first_name }} Blog </h1>
+                    <h1>{{ current_user.first_name }}'s Blog </h1>
                     {% else: %}
                     <h1>Blog Theme</h1>
                     {% endif %}
