--- a/templates/about.html
+++ b/templates/about.html
@@ -22,22 +22,16 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
-          nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis
-          sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
-          consectetur?
+          My Name is <strong>Mudasir Abbas</strong> I am a Student of AI and learning how to code.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius
-          praesentium recusandae illo eaque architecto error, repellendus iusto
-          reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in
-          officia voluptas voluptatibus, minus!
-        </p>
+          I am a passionate student on an exciting journey to become skilled in programming.
+          With a strong
+          foundation in Python and C/C++, I thrive on solving complex problems, writing
+          efficient code, and building meaningful solutions that impact the world.
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-          consequuntur magnam, excepturi aliquid ex itaque esse est vero natus
-          quae optio aperiam soluta voluptatibus corporis atque iste neque sit
-          tempora!
+          This Blog Website that I have created with the help of my instituter Dr. Angela Yu.
+          In this project, I have applied almost every concept that I have learned so far
         </p>
       </div>
     </div>
