add a download route to download resume

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,8 @@
           efficient code, and building meaningful solutions that impact the world.
         <p>
           This Blog Website that I have created with the help of my instituter Dr. Angela Yu.
-          In this project, I have applied almost every concept that I have learned so far
+          In this project, I have applied almost every concept that I have learned so far Want to learn more about me so
+        <a href="{{ url_for('download') }}"><strong>Download my Resume</strong></a>
         </p>
       </div>
     </div>
