--- a/templates/index.html
+++ b/templates/index.html
@@ -36,13 +36,14 @@
                 </p>
 
                 <!-- Delete Post Button -->
-
+                {% if current_user.id == 1:%}
                 <form action="{{ url_for('delete_post', post_id=post[0]) }}" method="POST" style="display:inline;">
                     <button type="submit" class="btn btn-danger btn-sm"
                             onclick="return confirm('Are you sure you want to delete this post?')">
                         Delete This Post
                     </button>
                 </form>
+                {% endif %}
             </div>
             <hr class="my-4" />
             {% endfor %}
