--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,5 @@
+{% from "bootstrap5/form.html" import render_form %}
+{% block content %}
 {% include "header.html" %}
 
 <header class="masthead" style="background-image: url('{{ post.img_url }}')">
@@ -23,15 +25,21 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <p>{{ post.body|safe }}</p>
-
+                {% if current_user.id == 1: %}
                 <div class="d-flex justify-content-end mb-4">
                     <a class="btn btn-primary float-right" href="{{ url_for('edit_post', post_id=post.id) }}">
                         Edit Post
                     </a>
                 </div>
+                {% endif %}
+
+                {{ ckeditor.load() }}
+                {{ ckeditor.config(name='body') }}
+                {{ render_form(form, novalidate=True, button_map={"submit": "primary"})}}
             </div>
         </div>
     </div>
 </article>
 
 {% include "footer.html" %}
+{% endblock %}
