--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    {% if current_user.first_name: %}
+                    {% if current_user.first_name %}
                     <h1>{{ current_user.first_name }}'s Blog </h1>
                     {% else: %}
                     <h1>Blog Theme</h1>
                     {% endif %}
-                    <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                    <span class="subheading">A Blog Theme by The Software Insight</span>
                 </div>
             </div>
         </div>
