--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -10,6 +10,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
+          
           {% if is_edit: %}
           <h1>Edit Post</h1>
           {% else: %}
@@ -17,6 +18,15 @@
           {% endif %}
           <span class="subheading">You're going to make a great blog post!</span>
         </div>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            <div class="flashes">
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+              {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
       </div>
     </div>
   </div>
