--- a/templates/post.html
+++ b/templates/post.html
@@ -25,7 +25,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <p>{{ post.body|safe }}</p>
-                {% if current_user.id == 1: %}
+                {% if current_user.id == 1 %}
                 <div class="d-flex justify-content-end mb-4">
                     <a class="btn btn-primary float-right" href="{{ url_for('edit_post', post_id=post.id) }}">
                         Edit Post
