--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                 <div class="site-heading">
                     {% if current_user.first_name %}
                     <h1>{{ current_user.first_name }}'s Blog </h1>
-                    {% else: %}
+                    {% else %}
                     <h1>Blog Theme</h1>
                     {% endif %}
                     <span class="subheading">A Blog Theme by The Software Insight</span>
@@ -18,6 +18,26 @@
     </div>
 </header>
 
+<div class="row">
+            <!-- : add a flash message here for users registering twice -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert" id="flash-message-{{ loop.index }}">
+                <div class="w-100 text-center">
+                    {{ message }}
+                </div>
+            </div>
+            <script>
+                setTimeout(function() {
+                    var msg = document.getElementById('flash-message-{{ loop.index }}');
+                    if (msg) { msg.style.display = 'none'; }
+                }, 5000);
+            </script>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+            <div class="col-lg-8 col-md-10 mx-auto">
 <!-- Main Content -->
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
