--- a/templates/login.html
+++ b/templates/login.html
@@ -1,50 +1,55 @@
-{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
-include "header.html" %}
-
+{% from "bootstrap5/form.html" import render_form %}
+{% block content %}
+{% include "header.html" %}
 
 <!-- Page Header -->
-<header
-        class="masthead"
-        style="background-image: url('../static/assets/img/login-bg.jpg')">
-    <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="page-heading">
-                    <h1>Log In</h1>
-                    <span class="subheading">Welcome Back!</span>
-                </div>
-            </div>
+<header class="masthead" style="background-image: url('../static/assets/img/login-bg.jpg')">
+  <div class="container position-relative px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+      <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="page-heading text-center">
+          <h1>Log In</h1>
+          <span class="subheading">Welcome Back!</span>
         </div>
+      </div>
     </div>
+  </div>
 </header>
 
+<!-- Main Content -->
 <main class="mb-4">
-    <div class="container">
-        <div class="row">
-            <!-- : add a flash message here for users registering twice -->
-             {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert" id="flash-message-{{ loop.index }}">
-                <div class="w-100 text-center">
-                {{ message }}
-                </div>
-            </div>
-            <script>
-                setTimeout(function() {
-                    var msg = document.getElementById('flash-message-{{ loop.index }}');
-                    if (msg) { msg.style.display = 'none'; }
-                }, 5000);
-            </script>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <!--: render a login form here-->
-                {{ render_form(form, novalidate=True, button_map={"submit": "primary"})}}
-            </div>
+  <div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+      <div class="col-md-10 col-lg-8 col-xl-7">
+
+        <!-- Flash Messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+          <div class="alert alert-{{ category }} alert-dismissible fade show text-center mt-3"
+               role="alert" id="flash-message-{{ loop.index }}">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <script>
+            setTimeout(function() {
+              var msg = document.getElementById('flash-message-{{ loop.index }}');
+              if (msg) { msg.style.display = 'none'; }
+            }, 5000);
+          </script>
+          {% endfor %}
+        {% endif %}
+        {% endwith %}
+
+        <!-- Login Form -->
+        <div class="mt-4">
+          {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
         </div>
+
+      </div>
     </div>
+  </div>
 </main>
 
-{% include "footer.html" %} {% endblock %}
+{% include "footer.html" %}
+{% endblock %}
