--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -3,28 +3,37 @@
 {% include "header.html" %}
 
 <!-- Page Header -->
-<header
-  class="masthead"
-  style="background-image: url('../static/assets/img/edit-bg.jpg')">
+<header class="masthead" style="background-image: url('../static/assets/img/edit-bg.jpg')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
-        <div class="page-heading">
-          
-          {% if is_edit: %}
-          <h1>Edit Post</h1>
-          {% else: %}
-          <h1>New Post</h1>
+        <div class="page-heading text-center">
+
+          {% if is_edit %}
+            <h1>Edit Post</h1>
+          {% else %}
+            <h1>New Post</h1>
           {% endif %}
+
           <span class="subheading">You're going to make a great blog post!</span>
         </div>
+
+        <!-- Flash Messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
-            <div class="flashes">
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">{{ message }}</div>
-              {% endfor %}
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show text-center mt-3"
+                 role="alert" id="flash-message-{{ loop.index }}">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            <script>
+              setTimeout(function() {
+                var msg = document.getElementById('flash-message-{{ loop.index }}');
+                if (msg) { msg.style.display = 'none'; }
+              }, 5000);
+            </script>
+            {% endfor %}
           {% endif %}
         {% endwith %}
       </div>
@@ -32,19 +41,21 @@
   </div>
 </header>
 
+<!-- Main Content -->
 <main class="mb-4">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+  <div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+      <div class="col-md-10 col-lg-8 col-xl-7">
 
+        <!-- CKEditor + Form -->
         {{ ckeditor.load() }}
         {{ ckeditor.config(name='body') }}
         {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-
 
       </div>
     </div>
   </div>
 </main>
+
 {% include "footer.html" %}
 {% endblock %}
