--- a/templates/post.html
+++ b/templates/post.html
@@ -2,11 +2,12 @@
 {% block content %}
 {% include "header.html" %}
 
+<!-- Post Header -->
 <header class="masthead" style="background-image: url('{{ post.img_url }}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="post-heading">
+                <div class="post-heading text-center">
                     <h1>{{ post.title }}</h1>
                     <h2 class="subheading">{{ post.subtitle }}</h2>
                     <span class="meta">
@@ -19,42 +20,46 @@
         </div>
     </div>
 </header>
-<div class="row">
-            <!-- : add a flash message here for users registering twice -->
-             {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert" id="flash-message-{{ loop.index }}">
-                <div class="w-100 text-center">
-                {{ message }}
-                </div>
-            </div>
-            <script>
-                setTimeout(function() {
-                    var msg = document.getElementById('flash-message-{{ loop.index }}');
-                    if (msg) { msg.style.display = 'none'; }
-                }, 5000);
-            </script>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
+
+<!-- Flash Messages -->
+<div class="container mt-3 px-4 px-lg-5">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show text-center" role="alert" id="flash-message-{{ loop.index }}">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        <script>
+            setTimeout(function() {
+                var msg = document.getElementById('flash-message-{{ loop.index }}');
+                if (msg) { msg.style.display = 'none'; }
+            }, 5000);
+        </script>
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
+</div>
+
+<!-- Post Content -->
 <article>
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>{{ post.body|safe }}</p>
-                {% if current_user.id == 1 %}
+                <p>{{ post.body | safe }}</p>
+
+                {% if current_user.is_authenticated and current_user.id == 1 %}
                 <div class="d-flex justify-content-end mb-4">
-                    <a class="btn btn-primary float-right" href="{{ url_for('edit_post', post_id=post.id) }}">
+                    <a class="btn btn-primary" href="{{ url_for('edit_post', post_id=post.id) }}">
                         Edit Post
                     </a>
                 </div>
                 {% endif %}
 
+                <!-- Comment Form -->
                 {{ ckeditor.load() }}
                 {{ ckeditor.config(name='body') }}
-                {{ render_form(form, novalidate=True, button_map={"submit": "primary"})}}
+                {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 
                 <!-- Comment Section -->
                 <div class="comment mt-5">
@@ -64,7 +69,10 @@
                         <li class="d-flex align-items-start mb-3 border-bottom pb-3">
                             <!-- Gravatar Image -->
                             <div class="commenterImage me-3">
-                                <img src="{{ comment.email | gravatar(size=50) }}" class="rounded-circle border" style="vertical-align: middle;" />
+                                <img src="{{ comment.email | gravatar(size=50) }}"
+                                     alt="User Avatar"
+                                     class="rounded-circle border"
+                                     style="vertical-align: middle;">
                             </div>
                             <!-- Comment Text -->
                             <div class="commentText">
@@ -72,10 +80,11 @@
                                 <p class="text-muted fs-6 mb-0">{{ comment.text | safe }}</p>
                             </div>
                         </li>
+                        {% else %}
+                        <li class="text-muted">No comments yet. Be the first to comment!</li>
                         {% endfor %}
                     </ul>
                 </div>
-
             </div>
         </div>
     </div>
