Remove commented-out LinkedIn link from footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,14 +2,13 @@
 <footer class="border-top mt-5 py-4 bg-light">
   <div class="container px-4 px-lg-5 text-center">
     <ul class="list-inline mb-3">
-      <li class="list-inline-item mx-2">
-        <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">
-            <span class="fa-stack fa-lg"></span>
-            <i class="fas fa-circle fa-stack-2x"></i>
-            <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
-            </span>
-          </a>
-          </li>
+<!--      <li class="list-inline-item mx-2">-->
+<!--        <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">-->
+<!--            <span class="fa-stack fa-lg"></span>-->
+<!--            <i class="fas fa-circle fa-stack-2x"></i>-->
+<!--            <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>-->
+<!--          </a>-->
+<!--          </li>-->
             <li class="list-inline-item mx-2">
             <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">
               <span class="fa-stack fa-lg">
